grammar.txt
#
# Keywords
#
    if
    else
    for
    while
    struct
    enum
    return
    defer
    continue
    break
    link
    load
    sizeof
    typeof
    as
    is
    true
    false
#
# Grammar
#
    <integer>               ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
    <float>                 ::= <integer> "." <integer>
                                | "." <integer>
    <string>                ::= "\"" <ASCII> "\""
    <char>                  ::= "'" <ASCII> "'"
    <binary_operator>       ::= "~" | "*" | "-" | "+" | "/"| "&" | "|" | "%" | "^" | "<" | ">" | "="
                                |  "<<" |  ">>" | "<=" | ">=" | "*=" | "&&" | "||" | "/=" | "+=" | "-=" | "%=" | "|=" | "&=" | "^=" | "!="
    <unary_operator>        ::= "!" | "*" | "-" | "+" | "&" | "^"
    <character>             ::= "Aa".."Zz"


    <ident>                 ::= "_" + <character | digit>..
                                | <character | digit>..

    <type>                  ::= <ident> | "u8" | "u16" | "u32" | "u64" | "s8" | "s16" | "s32" | "s64" | "f32" | "f64"
                              | <type> "*"..

    <binary>                ::= <expr> <binary_operator> <expr>
    <unary>                 ::= <unary_operator> <expr>

    <cond_expr>             ::= <expr> "==" <expr>
                                | <expr> "!=" <expr>
                                | <expr> "<" <expr>
                                | <expr> "<=" <expr>
                                | <expr> ">=" <expr>
                                | <expr> ">" <expr>

    <block_start>           ::= On indent
    <block_end>             ::= On undent
    <block>                 ::= <block_start> <statement>.. <block_end>

    <grouping>              ::= "(" <expr> ")"
    <subscript>             ::= <expr> "[" <expr> "]"
    <defer>                 ::= "defer" <expr>
                                | "defer" <block>
    <as>                    ::= <expr> "as" <type>
    <sizeof>                ::= "sizeof" <expr>
    <link>                  ::= "link" <string>
    <load>                  ::= "load" <string>
    <break>                 ::= "break"
    <continue>              ::= "continue"
    <true>                  ::= "true"
    <false>                 ::= "false"
    <return>                ::= "return" <expr>

    <ident_list>            ::= <ident>-<ident>
    <constant_decl>         ::= <ident_list>
    <var_decl>              ::= <ident_list>
                                | <ident_list> "=" <expr>
                                | <ident> "=" <expr>


    <func_call>             ::= <ident> "(" <expr>.. ")"
    <func_def_extern>       ::= <ident> "(" <type>.. ")" <type>
    <func_def>              ::= <ident> "(" <var_decl>.. ")" <type> <block>
    <func_lambda>           ::= <ident> '=>' <block>

    <variable_decl_block>   ::= <block_start> <var_decl>.. <block_end>
    <constant_decl_block>   ::= <block_start> <constant_decl>.. <block_end>

    <struct_def>            ::= <ident> <var_decl_block>
    <enum_def>              ::= <ident> <constant_decl_block>

    <case>                  ::= "case" <expr> <expr>
                                | "case" <expr> <block>
                                | "case" "." <enum_member> <expr>
                                | "case" "." <enum_member> <block>
    <case_block>            ::= <block_start> <case>.. <block_start>
    <if>                    ::= "if" <expr> <block>
                                | "if" <expr> <block> "else" <block>
    <if_switch>             ::= "if" <expr> <case_block>
    <for>                   ::= "for" <block>
                                | "for" <var_decl> "," <cond_expr> "," <expr> <block>
                                | "for" <cond_expr> <block>

    <expr>                  ::= <ident>
                                | <binary>
                                | <unary>
                                | <integer>
                                | <float>
                                | <string>
                                | <grouping>
                                | <true>
                                | <false>
                                | <sizeof>

    <def>                   ::= <func_def>
                                | <struct_def>
                                | <enum_def>
                                | <func_def_extern>
                                | <load>
                                | <link>
                                | <constant_decl>

    <statement>             ::= <def>
                                | <continue>
                                | <break>
                                | <var_decl>
                                | <func_call>
                                | <return>
                                | <defer>
                                | <if>
                                | <case>
                                | <for>
#
# Binary Operator Precedence
#
    [] 100
    . 100
    () 100
    -> 100
    ! 85
    ~ 85
    * 85
    & 85
    * 80
    / 80
    % 80
    - 70
    + 70
    < 65
    >> 65
    < 60
    > 60
    >= 60
    <= 60
    == 50
    != 50
    && 48
    || 47
    @ 40
    & 40
    ^ 30
    | 20
    ? 15
    : 15
    = 10
    += 10
    -= 10
    *= 10
    /= 10
    %= 10
    &= 10
    ^= 10
    |= 10
    <= 10
    >>= 10
